--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1395,12 +1395,11 @@ section,
   color: var(--accent-color);
 }
 
-
 /*--------------------------------------------------------------
 # Pricing Section
 --------------------------------------------------------------*/
 .pricing .pricing-item {
-  background-color: var(--surface-color);
+  background-color: var(--surface-color);s
   padding: 60px 40px;
   box-shadow: 0 3px 20px -2px rgba(0, 0, 0, 0.1);
   height: 100%;
